--- a/plugin.xml
+++ b/plugin.xml
@@ -3,7 +3,7 @@
 <plugin xmlns="http://apache.org/cordova/ns/plugins/1.0"
     xmlns:android="http://schemas.android.com/apk/res/android"
     id="com.dotsquares.bgaccelerometer"
-    version="0.1.0">
+    version="0.1.1">
     <name>bgaccelerometer</name>
     <description>Run accelerometer in background using corelocation services</description>
     <license>Apache 2.0</license>
@@ -26,7 +26,7 @@
             <string></string>
         </config-file>
         <config-file target="*-Info.plist" parent="NSLocationAlwaysUsageDescription">
-            <string>Your location is needed for this app.</string>
+            <string>Healthia needs your location to work correctly.</string>
         </config-file>
         <config-file target="*-Info.plist" parent="UIBackgroundModes">
             <array>
